--- a/src/i18n/locales/zh-cn.json
+++ b/src/i18n/locales/zh-cn.json
@@ -2,10 +2,16 @@
   "Click or drag file to this area to upload": "单击或拖动文件到此区域进行上传",
   "English": "英语",
   "File": "文件",
+  "File Content Preview": "文件内容预览",
+  "Images": "图像",
+  "No file content to display": "没有要显示的文件内容",
+  "Please input": "请输入",
   "Submit": "提交",
   "Support for a single or bulk upload": {
     " Strictly prohibited from": "支持单次或批量上传。严禁"
   },
+  "Support for text formats": "支持文本格式",
+  "Text": "文本",
   "Time": "时间",
   "hello": "你好2312",
   "uploading company data or other banned files": "上传公司数据或其他被禁止的文件"
