--- a/src/i18n/locales/zh-cn.json
+++ b/src/i18n/locales/zh-cn.json
@@ -5,6 +5,7 @@
   "File Content Preview": "文件内容预览",
   "Images": "图像",
   "No file content to display": "没有要显示的文件内容",
+  "Phone": "手机",
   "Please input": "请输入",
   "Submit": "提交",
   "Support for a single or bulk upload": {
