--- a/src/i18n/locales/zh-tw.json
+++ b/src/i18n/locales/zh-tw.json
@@ -5,6 +5,7 @@
   "File Content Preview": "文件內容預覽",
   "Images": "影像",
   "No file content to display": "沒有要顯示的文件內容",
+  "Phone": "电话",
   "Please input": "請輸入",
   "Submit": "送出",
   "Support for a single or bulk upload": {
